<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- LOGIN -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.unimib.koby.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">

        <!-- Action Login - Register -->
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_mainActivity"
            app:destination="@id/mainActivity" />

        <!-- verso l’HomeActivity -->
    </fragment>

    <!-- REGISTRAZIONE-->
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.unimib.koby.ui.login.RegisterFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_register" />

    <!-- HOME (activity)-->
    <activity
        android:id="@+id/mainActivity"
        android:name="com.unimib.koby.ui.MainActivity"
        android:label="MainActivity" />
</navigation>
